# topology

./: .gitignore  Makefile.am  README.md  configure.ac
conf/: bdw.conf  test.conf
src/: Makefile.am  builder.c  parser.c  socfw.c  socfw.h  topology.h
